# SMHA

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/testing_assets/: flickr_tokens.txt  flickr_train.txt  flickr_val.txt  json_file_test.json
data/testing_assets/pascal_images_texts/texts/bus/: 2008_000032.txt
hyperparameters/: default_hparams.yaml  flickr8k.yaml  flickr8k_multi_head.yaml  pascal_ms_head_attention.yaml  pascal_multi_head.yaml
src/: find_hparams_flickr8k_pipeline.py  find_hparams_flickr_pipeline.py  find_hparams_pascal_pipeline.py  inference_flickr8k_pipeline.py  inference_flickr_pipeline.py  inference_pascal_pipeline.py  train_coco_pipeline.py  train_flickr8k_pipeline.py  train_flickr_pipeline.py  train_pascal_pipeline.py  training_pipeline.py  transformer_train_flickr_pipeline.py  transformer_train_flicrk_pipeline.py  vse_plusplus_train_flickr_pipeline.py
src/img2text_matching/: datasets.py  evaluators.py  hparams_finders.py  hyperparameters.py  loaders.py  models.py  test_datasets.py  test_evaluators.py  test_loaders.py  test_models.py
src/multi_hop_attention/: hyperparameters.py  loaders.py  models.py  test_loaders.py  test_models.py
src/training/: cells.py  dataset.py  datasets.py  evaluators.py  hparams_finders.py  loader.py  loaders.py  models.py  optimizers.py  test_dataset.py  test_datasets.py  test_evaluators.py  test_loaders.py  test_models.py
src/transformer_resnet/: loaders.py  models.py
src/utils/: constants.py  datasets.py  git_utils.py  test_datasets.py  test_evaluators.py
src/vse_plusplus/: loaders.py  model.py
