[tool.poetry]
name = "multimodal_representations_deep_learning"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pre-commit = "^1.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
