[tool.poetry]
name = "multimodal_representations_deep_learning"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
tensorflow = "^1.13"
tqdm = "^4.31"
hyperopt = "^0.1.2"
"ruamel.yaml" = "^0.15.89"
Pillow = "^6.0"
opencv-python = "^4.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pre-commit = "^1.15"
pytest = "^4.4"
mypy = "^0.700.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
